--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,4 +2,13 @@
   <div class="heading">
     <h1>Breaking</h1>
   </div>
+  <li><%= link_to "Home", root_path %></li>
+
+  <% if signed_in? %>
+    <%= current_user %>
+    <%= link_to "Profile", current_user %>
+    <%= link_to "Log out", signout_path, method: "delete" %>
+  <% else %>
+    <%= link_to "Log in", signin_path %>
+  <% end %>
 </header>
