--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,527 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+ * HTML5 Boilerplate
+ *
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ *
+ * Detailed information about this CSS: h5bp.com/css
+ *
+ * ==|== normalize ==========================================================
+ */
+
+
+/* =============================================================================
+   HTML5 display definitions
+   ========================================================================== */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
+audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
+audio:not([controls]) { display: none; }
+[hidden] { display: none; }
+
+
+/* =============================================================================
+   Base
+   ========================================================================== */
+
+/*
+ * 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
+ * 2. Prevent iOS text size adjust on device orientation change, without disabling user zoom: h5bp.com/g
+ */
+
+html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+
+html, button, input, select, textarea { font-family: sans-serif; color: #222; }
+
+body { margin: 0; font-size: 1em; line-height: 1.4;background-color: #eee }
+
+/*
+ * Remove text-shadow in selection highlight: h5bp.com/i
+ * These selection declarations have to be separate
+ * Also: hot pink! (or customize the background color to match your design)
+ */
+
+::-moz-selection { background: #02BBE2; color: #fff; text-shadow: none; }
+::selection { background: #02BBE2; color: #fff; text-shadow: none; }
+
+
+/* =============================================================================
+   Links
+   ========================================================================== */
+
+a { color: #00e; }
+a:visited { color: #551a8b; }
+a:hover { color: #06e; }
+a:focus { outline: thin dotted; }
+
+/* Improve readability when focused and hovered in all browsers: h5bp.com/h */
+a:hover, a:active { outline: 0; }
+
+
+/* =============================================================================
+   Typography
+   ========================================================================== */
+
+abbr[title] { border-bottom: 1px dotted; }
+
+b, strong { font-weight: bold; }
+
+blockquote { margin: 1em 40px; }
+
+dfn { font-style: italic; }
+
+hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
+
+ins { background: #ff9; color: #000; text-decoration: none; }
+
+mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
+
+/* Redeclare monospace font family: h5bp.com/j */
+pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
+
+/* Improve readability of pre-formatted text in all browsers */
+pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
+
+q { quotes: none; }
+q:before, q:after { content: ""; content: none; }
+
+small { font-size: 85%; }
+
+/* Position subscript and superscript content without affecting line-height: h5bp.com/k */
+sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
+sup { top: -0.5em; }
+sub { bottom: -0.25em; }
+
+
+/* =============================================================================
+   Lists
+   ========================================================================== */
+
+ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
+dd { margin: 0 0 0 40px; }
+nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
+
+
+/* =============================================================================
+   Embedded content
+   ========================================================================== */
+
+/*
+ * 1. Improve image quality when scaled in IE7: h5bp.com/d
+ * 2. Remove the gap between images and borders on image containers: h5bp.com/i/440
+ */
+
+img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
+
+/*
+ * Correct overflow not hidden in IE9
+ */
+
+svg:not(:root) { overflow: hidden; }
+
+
+/* =============================================================================
+   Figures
+   ========================================================================== */
+
+figure { margin: 0; }
+
+
+/* =============================================================================
+   Forms
+   ========================================================================== */
+
+form { margin: 0; }
+fieldset { border: 0; margin: 0; padding: 0; }
+
+/* Indicate that 'label' will shift focus to the associated form element */
+label { cursor: pointer; }
+
+/*
+ * 1. Correct color not inheriting in IE6/7/8/9
+ * 2. Correct alignment displayed oddly in IE6/7
+ */
+
+legend { border: 0; *margin-left: -7px; padding: 0; white-space: normal; }
+
+/*
+ * 1. Correct font-size not inheriting in all browsers
+ * 2. Remove margins in FF3/4 S5 Chrome
+ * 3. Define consistent vertical alignment display in all browsers
+ */
+
+button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
+
+/*
+ * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
+ */
+
+button, input { line-height: normal; }
+
+/*
+ * 1. Display hand cursor for clickable form elements
+ * 2. Allow styling of clickable form elements in iOS
+ * 3. Correct inner spacing displayed oddly in IE7 (doesn't effect IE6)
+ */
+
+button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; *overflow: visible; }
+
+/*
+ * Re-set default cursor for disabled elements
+ */
+
+button[disabled], input[disabled] { cursor: default; }
+
+/*
+ * Consistent box sizing and appearance
+ */
+
+input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; *width: 13px; *height: 13px; }
+input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
+input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button { -webkit-appearance: none; }
+
+/*
+ * Remove inner padding and border in FF3/4: h5bp.com/l
+ */
+
+button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
+
+/*
+ * 1. Remove default vertical scrollbar in IE6/7/8/9
+ * 2. Allow only vertical resizing
+ */
+
+textarea { overflow: auto; vertical-align: top; resize: vertical; }
+
+/* Colors for form validity */
+input:valid, textarea:valid {  }
+input:invalid, textarea:invalid { background-color: #f0dddd; }
+
+
+/* =============================================================================
+   Tables
+   ========================================================================== */
+
+table { border-collapse: collapse; border-spacing: 0; }
+td { vertical-align: top; }
+
+
+/* =============================================================================
+   Chrome Frame Prompt
+   ========================================================================== */
+
+.chromeframe { margin: 0.2em 0; background: #ccc; color: black; padding: 0.2em 0; }
+
+
+/* ==|== primary styles =====================================================
+   Author:
+   ========================================================================== */
+
+/* ==|== media queries ======================================================
+   EXAMPLE Media Query for Responsive Design.
+   This example overrides the primary ('mobile first') styles
+   Modify as content requires.
+   ========================================================================== */
+
+@media only screen and (min-width: 35em) {
+  /* Style adjustments for viewports that meet the condition */
+}
+
+
+
+/* ==|== non-semantic helper classes ========================================
+   Please define your styles before this section.
+   ========================================================================== */
+
+/* For image replacement */
+.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
+.ir br { display: none; }
+
+/* Hide from both screenreaders and browsers: h5bp.com/u */
+.hidden { display: none !important; visibility: hidden; }
+
+/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
+.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+
+/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
+.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+
+/* Hide visually and from screenreaders, but maintain layout */
+.invisible { visibility: hidden; }
+
+/* Contain floats: h5bp.com/q */
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { *zoom: 1; }
+
+
+
+/* ==|== print styles =======================================================
+   Print styles.
+   Inlined to avoid required HTTP connection: h5bp.com/r
+   ========================================================================== */
+
+@media print {
+  * { background: transparent !important; color: black !important; box-shadow:none !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
+  a, a:visited { text-decoration: underline; }
+  a[href]:after { content: " (" attr(href) ")"; }
+  abbr[title]:after { content: " (" attr(title) ")"; }
+  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
+  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  thead { display: table-header-group; } /* h5bp.com/t */
+  tr, img { page-break-inside: avoid; }
+  img { max-width: 100% !important; }
+  @page { margin: 0.5cm; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3 { page-break-after: avoid; }
+}
+
+body{
+  /*background-color: #aaa;*/
+  background-image:url('../img/grey.jpg');
+  
+  background-image:url('http://s.ytimg.com/yt/imgbin/www-refreshbg-vflC3wnbM.png');
+}
+
+#top-bar{
+
+ background: rgb(242,242,242); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(242,242,242,1) 1%, rgba(255,255,255,1) 98%, rgba(242,242,242,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(242,242,242,1)), color-stop(98%,rgba(255,255,255,1)), color-stop(100%,rgba(242,242,242,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(242,242,242,1) 1%,rgba(255,255,255,1) 98%,rgba(242,242,242,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(242,242,242,1) 1%,rgba(255,255,255,1) 98%,rgba(242,242,242,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(242,242,242,1) 1%,rgba(255,255,255,1) 98%,rgba(242,242,242,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(242,242,242,1) 1%,rgba(255,255,255,1) 98%,rgba(242,242,242,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#f2f2f2',GradientType=0 ); /* IE6-9 */
+
+
+  height:40px;
+  margin-bottom:10px;
+  border: 1px solid white;
+  border-top:0px;
+
+
+
+
+}
+
+#container{
+  display:block;
+  position:relative;
+  width:960px;
+  height:100%;
+  margin:auto;
+ /* background-color: white;*/
+}
+
+/*#content-760{
+  width:740px;
+  margin:auto;
+  background-color: white;
+  
+}*/
+@mixin gradient($from:rgba(2,187,226,1), $to:rgba(1,166,198,1)){
+  background: $from; /* Old browsers */
+background: -moz-linear-gradient(top, $from 0%, $to 99%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0 $from), color-stop(99%,$to)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, $from 0%,$to 99%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, $from 0%,$to 99%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, $from 0%,$to 99%); /* IE10+ */
+background: linear-gradient(to bottom, $from 0%,$to 99%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#02bbe2', endColorstr='#01a6c6',GradientType=0 ); /* IE6-9 */
+}
+
+
+.btn{
+ @include gradient($from:rgba(2,187,226,1), $to:rgba(1,166,198,1));
+font-family:helvetica,arial,sans-serif;
+text-align: center;
+font-weight: bold;
+border:1px solid rgba(2,187,226,1);
+box-shadow: 0px 2px 1px 0px rgba(0,0,0,.1);
+color:#ffffff;
+text-shadow:0px -1px #333;
+cursor:pointer;
+padding:10px;
+font-size: 18px;
+}
+
+.btn:hover{
+  @include gradient(rgba(2,208,249,1),rgba(2,193,226,1));
+}
+
+.btn:active{
+  @include gradient(rgba(2,187,226,1),rgba(1,166,198,1));
+  box-shadow: inset 0px -1px 1px 0px rgba(0,0,0,0);
+}
+
+.btn-transparent{
+  @include gradient($from:rgba(255,255,255,0), $to:rgba(255,255,255,0));
+box-shadow: 0px 1px 0px 0px rgba(0,0,0,.05);
+border:1px solid #e9e9e9;
+padding:5px;
+color:rgba(0,0,0,.3);
+font-size: 14px;
+line-height: 17px;
+text-shadow:0px 1px white;
+}
+
+
+.btn-transparent:hover{
+color:rgba(255,255,255,.9);
+border:1px solid #02BBE2;
+text-shadow:0px -1px rgba(0,0,0,.2);
+}
+
+
+.signup-btn{
+display:inline-block;
+width:70px;
+height:18px;
+float:right;
+margin:5px;
+margin-right:10px;
+line-height: 17px;
+font-size: 14px;
+
+
+}
+
+
+.signin-btn{
+
+display:inline-block;
+width:70px;
+height:18px;
+margin:5px;
+float:right;
+margin-right:0px;
+line-height: 17px;
+font-size: 14px;
+
+}
+
+.signup-box{
+  width:270px;
+  background-color: white;
+  padding:20px;
+  // border-left : 1px solid rgba(0,0,0,.05);
+  /*float:right;*/
+  margin:auto;
+   }
+
+
+
+.facebook-btn{
+width:248px;
+height:23px;
+background: rgb(66,100,179); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(66,100,179,1) 0%, rgba(56,88,153,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(66,100,179,1)), color-stop(100%,rgba(56,88,153,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(66,100,179,1) 0%,rgba(56,88,153,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(66,100,179,1) 0%,rgba(56,88,153,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(66,100,179,1) 0%,rgba(56,88,153,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(66,100,179,1) 0%,rgba(56,88,153,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4264b3', endColorstr='#385899',GradientType=0 ); /* IE6-9 */
+border:1px solid #4264B3;
+  
+}
+
+.facebook-btn:hover{
+ background: rgb(84,135,229); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(84,135,229,1) 1%, rgba(77,119,204,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(84,135,229,1)), color-stop(100%,rgba(77,119,204,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(84,135,229,1) 1%,rgba(77,119,204,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(84,135,229,1) 1%,rgba(77,119,204,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(84,135,229,1) 1%,rgba(77,119,204,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(84,135,229,1) 1%,rgba(77,119,204,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5487e5', endColorstr='#4d77cc',GradientType=0 ); /* IE6-9 */
+border:1px solid #5485E5;
+color:rgba(255,255,255,1);
+}
+
+.facebook-btn:active{
+background: rgb(75,122,204); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(75,122,204,1) 1%, rgba(67,104,178,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(75,122,204,1)), color-stop(100%,rgba(67,104,178,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(75,122,204,1) 1%,rgba(67,104,178,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(75,122,204,1) 1%,rgba(67,104,178,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(75,122,204,1) 1%,rgba(67,104,178,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(75,122,204,1) 1%,rgba(67,104,178,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b7acc', endColorstr='#4368b2',GradientType=0 ); /* IE6-9 */
+color:rgba(255,255,255,.7);
+text-shadow: 0px -1px rgba(0,0,0,.3);
+}
+
+.signup-box-seperator{
+  width:268px;
+  margin-top:20px;
+  margin-bottom:20px;
+  font-family: helvetica,arial,sans-serif;
+  font-size:12px;
+  color:rgba(0,0,0,.2);
+}
+
+
+
+.signup-box-form{}
+.signup-box-form-input{
+
+}
+
+.input{
+background: rgb(250,250,250); /* Old browsers */
+box-shadow: inset 0px -1px 1px 0px rgba(0,0,0,.02);
+width:258px;
+border:1px solid #E0E0E0;
+margin-bottom: 10px;
+height:35px;
+}
+
+
+.text-input{
+font-family: helvetica,arial,sans-serif;
+font-size:20px;
+color:rgba(0,0,0,.4);
+cursor:text;
+padding-left:10px;
+}
+
+.placeholder{
+  position:absolute;
+  margin-top:-43px;
+
+  font-family: helvetica,arial,sans-serif;
+font-size:20px;
+color:rgba(0,0,0,.2);
+cursor:text;
+padding-left:10px;
+
+}
+
+input[type="text"]:focus > .placeholder{
+ color:rgba(0,0,0,0);
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+.uneditable-input:focus {
+  border-color: #02BBE2;
+  outline: 0;
+  outline: thin dotted \9;
+  /* IE6-9 */
+}
+
+.input:focus{
+background: rgb(255,255,255); /* Old browsers */
+}
+
+
+.signup{
+width:270px;
+height:43px;
+}
+
