Changed all mentions of sign in to log in.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -389,17 +389,15 @@ font-size: 14px;
 }
 
 
-.signin-btn{
-
-display:inline-block;
-width:70px;
-height:18px;
-margin:5px;
-float:right;
-margin-right:0px;
-line-height: 17px;
-font-size: 14px;
-
+.login-btn {
+  display:inline-block;
+  width:70px;
+  height:18px;
+  margin:5px;
+  float:right;
+  margin-right:0px;
+  line-height: 17px;
+  font-size: 14px;
 }
 
 .signup-box{
