--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,29 @@
 <% provide(:title, 'Home') %>
-<div role="main">
-  <div id="container">
-    <div class="signup-box">
-      <div class="btn facebook-btn">
-        Log in with facebook
-      </div>
-      <div class="signup-box-seperator">
-        ------------ or create a breaking account ------------
-      </div>
-      <form action="#" class="signup-box-form" method="post">
-        <div class="input-box">
-          <input type="text" class="text-input input" autocomplete="off" name="user[name]" maxlength="30">
-          <span class="text-input placeholder">Name</span>
-        </div>
-        <div class="input-box">
-          <input type="text" class="text-input input" autocomplete="off" name="user[email]">
-          <span class="text-input placeholder">Email</span>
-        </div>
-        <div class="input-box">
-          <input type="password" class="text-input input" name="user[user_password]">
-          <span class="placeholder">Password</span>
-        </div>
-        <button type="submit" class="btn signup">
-          Sign Up !
-        </button>
-      </form>
-    </div>
+<div class="home-welcome"> 
+
+</div>
+<div class="signup-box">
+  <div class="btn facebook-btn">
+    Log in with facebook
   </div>
-</div> 
+  <div class="signup-box-seperator">
+    ------------ or create an account ------------
+  </div>
+  <form action="#" class="signup-box-form" method="post">
+    <div class="input-box">
+      <input type="text" class="text-input input" autocomplete="off" name="user[name]" maxlength="30">
+      <span class="text-input placeholder">Name</span>
+    </div>
+    <div class="input-box">
+      <input type="text" class="text-input input" autocomplete="off" name="user[email]">
+      <span class="text-input placeholder">Email</span>
+    </div>
+    <div class="input-box">
+      <input type="password" class="text-input input" name="user[user_password]">
+      <span class="placeholder">Password</span>
+    </div>
+    <button type="submit" class="btn signup">
+      Sign Up !
+    </button>
+  </form>
+</div>
