--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,21 @@
 <header>
-  <div id="top-bar">
-    <div id="container"> 
-      <div class="heading">
-        <h1>Breaking</h1>
-      </div>
-      <li><%= link_to "Home", root_path %></li>
-
-      <% if logged_in? %>
-        <%= current_user %>
-        <%= link_to "Profile", current_user %>
-        <%= link_to "Log out", logout_path, method: "delete", class: "btn btn-transparent login-btn" %>
-      <% else %>
-        <%= link_to "Log in", login_path, class: "btn btn-transparent login-btn" %>
-      <% end %>
+  <div class="navbar">
+    <div class="container"> 
+      <div class="brand"> BREAKING </div>
+      <ul class="nav pull-right">
+        <!-- <li><%= link_to "Home", root_path %></li> -->
+        <%# TODO: Add name in the nav bar %>
+        <% if logged_in? %>
+          <li> <%= link_to "Profile", current_user, class: 'btn btn-transparent btn-small', id: 'profile-button' %> </li>
+          <li><%= link_to "Log out", logout_path, method: 'delete', class: 'btn btn-transparent btn-small', id: 'logout-button' %></li>
+        <% else %>
+          <li><%= link_to "Sign up", signup_path, class: "btn btn-transparent btn-small", id: 'signup-button' %></li>
+          <li><%= link_to "Log in", login_path, class: "btn btn-transparent btn-small", id: 'login-button' %></li>
+        <% end %>
+      </ul>
+      <div class="clearfix"></div>
     </div>
   </div>
+
+  <div id="user-name"><%= current_user %></div>
 </header>
